Fix Java 17 compatibility issues - replace getLast/getFirst with compatible methods
Co-authored-by: y0ncha <8536651+y0ncha@users.noreply.github.com>