@@ -117,7 +117,7 @@ public class MachineImpl implements Machine {
         // Forward pass (right→left)
         List<RotorTrace> forwardSteps = forwardTransform(intermediate);
         if (!forwardSteps.isEmpty()) {
-            intermediate = forwardSteps.getLast().exitIndex();
+            intermediate = forwardSteps.get(forwardSteps.size() - 1).exitIndex();
         }
 
         // Reflector
@@ -132,7 +132,7 @@ public class MachineImpl implements Machine {
         // Backward pass (left→right)
         List<RotorTrace> backwardSteps = backwardTransform(intermediate);
         if (!backwardSteps.isEmpty()) {
-            intermediate = backwardSteps.getLast().exitIndex();
+            intermediate = backwardSteps.get(backwardSteps.size() - 1).exitIndex();
         }
 
         char outputChar = keyboard.toChar(intermediate);
